# unisync-server

./: .gitignore  INSTALL  README  configure.ac
etc/: Makefile.am  unisync-server-user.lua  unisync-server.conf  unisync-server.lua.in  unisync.prf  unisync.prf.in
init/: debian.init
libexec/: Makefile.am  unisync-client-mon.sh  unisync-client-port  unisync-conflict-resolve  unisync-conflict-resolve.sh  unisync-server-syncinit  unisync-server-syncinit.sh  unisync-sync-client.sh  unisync-update-clients  unisync-update-clients.sh
